Fixed light switch button z-index

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -121,5 +121,4 @@ figcaption :first-child {
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: 20000;
 }
